--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,11 +3,19 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Launch Chrome",
+      "request": "launch",
+      "type": "chrome",
+      "preLaunchTask": "npm: start",
+      "url": "http://localhost:1431",
+      "webRoot": "${workspaceFolder}"
+    },
+    {
       "name": "ng serve",
       "type": "pwa-chrome",
       "request": "launch",
       "preLaunchTask": "npm: start",
-      "url": "http://localhost:4200/"
+      "url": "http://localhost:4100/"
     },
     {
       "name": "ng test",
