--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "flag-icons": "^2.0.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "moment": "^2.29.3",
     "mousetrap": "^1.6.5",
     "ng-animate": "^0.3.4",
     "ng-chartist": "^6.3.0",
