--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "chartist": "^0.11.4",
     "express": "^4.15.2",
     "feather-icons": "^4.26.0",
+    "file-saver": "^2.0.5",
     "flag-icons": "^2.0.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
