--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "rxjs": "~6.6.0",
     "sass": "~1.26.11",
     "screenfull": "^5.0.1",
+    "sweetalert2": "^11.4.34",
     "tslib": "^2.0.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
