--- a/angular.json
+++ b/angular.json
@@ -79,8 +79,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "multikart:build",
-            "outputPath": "dist/multikart/server"
+            "browserTarget": "multikart:build"
           },
           "configurations": {
             "production": {
